syntax = "proto3";
package task;
option go_package = "task-manager/src/proto"; 

message Task {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
}

message CreateTaskRequest {
    Task task = 1;
}

message CreateTaskResponse {
    Task task = 1;
}

message GetTasksRequest {}

message GetTasksResponse {
    repeated Task tasks = 1;
}

service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
    rpc GetTasks(GetTasksRequest) returns (GetTasksResponse) {}
}